fix overflow grid issue in Firefox, add border to buttons

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 /*******************************************/
 
 /* Box Model Hack */
-*{
+* {
   box-sizing: border-box;
 }
 
@@ -28,8 +28,6 @@ input, button {
   cursor: pointer;
 }
 
-
-
 /******************************************
 /* LAYOUT
 /*******************************************/
@@ -51,6 +49,7 @@ button {
   box-shadow: 5px 5px 5px lightgray;
   background: linear-gradient( rgb(252, 167, 10), rgb(243, 143, 243));
   margin: 1%;
+  border: 2px solid black;
 }
 
 #cocktails button:nth-child(odd) {
@@ -82,15 +81,12 @@ h2 {
   align-content: center;
   grid-template-columns: repeat(4, 1fr);
   grid-auto-rows: 1fr;
-  gap: 1%;
   margin: 0 auto;
   margin-bottom: 3%;
 }
 
-
 #cocktails button {
   font-style: italic;
-  min-width: 30%;
 }
 
 h4, ul {
@@ -117,7 +113,6 @@ img{
   width: 90%;
   max-width: 600px;
 }
-
 
 p {
   font-weight: 700;
@@ -156,7 +151,6 @@ section + section {
   img {
     margin: 10% auto;
   }
-
 }
 
 @media screen and (max-width: 400px) {
@@ -164,5 +158,4 @@ section + section {
     width: 90%;
     grid-template-columns: repeat(2, auto);
   }
-
 }
